Đang làm theo bài 18 stt 13

--- a/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
@@ -1,17 +1,9 @@
 ﻿
 @{
-    Layout = null;
+    ViewBag.Title = "Trang chủ";
+    Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
+@section header{
+    Trang chủ
+    }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div> 
-    </div>
-</body>
-</html>
